# epub-optimizer

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
src/: main.rs  tempdir.rs  zip.rs
