[package]
name = "epub-optimizer"
version = "0.0.0"
authors = ["Joshua Li <josh@jrl.ninja>"]
license = "ISC"

[dependencies]
pico-args = { version = "0.3", default-features = false }
fastrand = { version = "1.2.3", default-features = false }
walkdir = { version = "2.3", default-features = false }
minify-html = { version = "0.2.6", default-features = false }

# Temporarily pinned to 7f3b39f until new version is released.
zip = { git = "https://github.com/mvdnes/zip-rs", rev = "7f3b39f", default-features = false, features = ["deflate"] }

[[bin]]
name = "epub-optimizer"
path = "src/main.rs"

[profile.release]
panic = "abort"  # remove support for stack unwinding for smaller releases
lto = "fat"
codegen-units = 1
opt-level = "z"  # smaller releases; most of the overhead is in external programs
