[package]
name = "epub-optimizer"
version = "0.0.0"
authors = ["Joshua Li <josh@jrl.ninja>"]
license = "ISC"

[dependencies]
walkdir = { version = "~2", default-features = false }
minify-html = { version = "~0.3", default-features = false }

# I barely use any of pico-args APIs. There are more featureful releases but ~0.2 is good.
pico-args = { version = "~0.2", default-features = false }

# fastrand 1.2.3 is the last version that uses a faster PCG variant (PCG XSH RS 64/32).
fastrand = { version = "=1.2.3", default-features = false }

# Temporarily pinned to a decent sha until ~0.6 is released.
zip = { git = "https://github.com/mvdnes/zip-rs", rev = "97fe9d5", default-features = false, features = ["deflate"] }

[[bin]]
name = "epub-optimizer"
path = "src/main.rs"

[profile.release]
panic = "abort"  # remove support for stack unwinding for smaller releases
lto = "fat"
codegen-units = 1
opt-level = "z"  # smaller releases; most of the overhead is in external programs
